@@ -1,3 +1,8 @@
+Tue Jun 15 18:55:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tutorials/Quoter/Simple/03.html:
+          Updated several links
+
 Tue Jun 15 17:59:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/ciao_tests.lst:
